# bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
research/: RESEARCH_NOTES.md
src/day_trading_bot/: __init__.py  backtest.py  config.py  features.py  main.py  model.py  pipeline.py  risk.py  strategy.py
src/day_trading_bot/data/: __init__.py  schwab_collector.py
src/day_trading_bot/execution/: __init__.py  ibkr_executor.py
tests/: test_features.py  test_strategy_risk.py
